tests/reports/ycsb_20260214_170328/workload_a_load.txt
  File "/tmp/ycsb-0.17.0/bin/ycsb", line 228
    except subprocess.CalledProcessError, err:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
